# rb-kos-research

./: .gitignore  Makefile  Readme.md  run.sh
agda-hello/: AgdaHello.agda  Makefile  RTE.hs  agda-hello.agda  ffi.c
doc/: 0-research-log.md  1-report-run-first-kos.md  2-report.md  3-peport-port-microhs.md  4-report-agda-kasperskyOS.md  TODO.md  my-manifest.md
echo/: Makefile  Server.edl  client.c  init.c  server.c
echo-haskell/: Client.edl  Hello.hs  KosTransport.hs  Makefile  Server.edl  Server.hs  ffi.c  init.c  security.psl  server.c
examples/agda-hello/: Makefile  RTE.hs
examples/echo/: Einit.edl  security.psl  server.c
examples/echo-haskell/: Echo.hs  Echo.idl  Hello.hs  KosTransport.hs  Makefile  Server.hs  client.c  config-kos-64.h  eval-kos-64.c  ffi.c  init.c
examples/hello/: Makefile
examples/microhs/: Hello.edl  Hello.hs  Makefile  config-kos-64.h
examples/simple-ksm/: hello.c  init.c
examples/simple-ksm2/: Hello.c  HelloHs.hs  Makefile  config-kos-64.h  eval-kos-64.c  eval.c  security.psl.c
hello/: CMakeLists.txt  Hello.edl  README.md  cross-build.sh  init.c  init.yaml.in  security.psl.c  security.psl.in
hello/einit/: CMakeLists.txt
hello/einit/src/: init.yaml.in
hello/hello/: CMakeLists.txt
hello/hello/src/: hello.c
microhs/: Hello.hs  Makefile  config-kos-64.h  security.psl  start.sh
simple-ksm/: Makefile
simple-ksm2/: Makefile  eval-kos-64.c  security.psl.c
